--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background:#202020;
+    font-family: 'Roboto Condensed', sans-serif;
+    color:#fff;
+
+    p{
+        margin:0;
+    }
+}
