--- a/src/app/weather/weather-informations/weather-informations.component.html
+++ b/src/app/weather/weather-informations/weather-informations.component.html
@@ -1,6 +1,20 @@
-sunrise : {{weatherApiService.sunrise | date:'EEEE'}}
-
-sunrise : {{weatherApiService.sunrise | date:'shortTime'}}
-sunset : {{weatherApiService.sunset | date:'shortTime'}}
-Wind speed: {{weatherApiService.windSpeed}} m/s
-<!-- Wind angle: {{windAngle}} deg<img src="https://cdn.imgbin.com/16/8/23/imgbin-wind-direction-computer-icons-arrow-6Lkgkhue65Yirm9waWQbxGV3A.jpg" [ngStyle]="{'transform': 'rotate('+windAngle+'deg)'}"> -->
+<p title="Sunrise">
+    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.06 6.03" width="20px" height="20px"><title>Sunrise</title><g id="Calque_2" data-name="Calque 2"><g id="Layer_2" data-name="Layer 2"><path d="M12.06,6A6,6,0,0,0,0,6" style="fill:#ee6f4e"/></g></g></svg></span> 
+    <span>{{weatherApiService.sunrise}}</span>
+</p>
+<p title="Sunset">
+    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.06 6.03" width="20px" height="20px"><title>Sunset</title><g id="Calque_2" data-name="Calque 2"><g id="Layer_2" data-name="Layer 2"><path d="M12.06,6A6,6,0,0,0,0,6" style="fill:#fff"/></g></g></svg></span> 
+    <span>{{weatherApiService.sunset}}</span>
+</p>
+<p title="Wind speed">
+    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18.81 20.26" width="20px" height="20px"><title>Wind speed</title><g id="Calque_2" data-name="Calque 2"><g id="Layer_2" data-name="Layer 2"><path d="M18.81,4.57A4.58,4.58,0,0,0,14.24,0V1.37a3.2,3.2,0,0,1,0,6.39H0V9.15H14.27A4.58,4.58,0,0,0,18.81,4.57Z" style="fill:#fff"/><path d="M14.77,15.69a4.57,4.57,0,0,1-4.57,4.57V18.89a3.2,3.2,0,0,0,0-6.4H0V11.11H10.24A4.58,4.58,0,0,1,14.77,15.69Z" style="fill:#fff"/></g></g></svg></span> 
+    <span>{{weatherApiService.windSpeed}} m/s</span>
+</p>
+<p title="Wind angle">
+    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17.01 20.44" width="20px" height="20px" [ngStyle]="{'transform': 'rotate('+weatherApiService.windAngle+'deg)'}"><title>Wind angle</title><g id="Calque_2" data-name="Calque 2"><g id="Layer_2" data-name="Layer 2"><path d="M16.76,7.85,9.15.24A1.55,1.55,0,0,0,8.49,0a.87.87,0,0,0-.63.24L.25,7.85a.93.93,0,0,0,0,1.31.92.92,0,0,0,1.31,0L6.7,4.11c.27-.24.8-.11.8.14L7.31,19.08a1.24,1.24,0,0,0,1.08,1.36A1.24,1.24,0,0,0,9.51,19.1L9.7,4.28c0-.22.4-.35.61-.17l5.1,5.09a1,1,0,0,0,1.35-1.35Z" style="fill:#fff"/></g></g></svg></span>
+    <span>{{weatherApiService.windAngle}} deg</span>
+</p>
+<p title="Humidity">
+    <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.53 20.33" width="20px" height="20px"><title>Humidity</title><g id="Calque_2" data-name="Calque 2"><g id="Layer_2" data-name="Layer 2"><path d="M14,13.07a6.77,6.77,0,0,1-13.53,0C.5,9.33,7.27.5,7.27.5S14,9.33,14,13.07Z" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round"/><path d="M12.11,13.35a6.81,6.81,0,0,1-4.45,4.58" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round"/></g></g></svg></span>
+    <span>{{weatherApiService.humidity}} %</span>
+</p>
