--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -1,36 +1,67 @@
 main{
+    display:flex;
     #weather-content{
         position:relative;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         height:100vh;
+        flex:1;
         z-index:2;
     }
     .weather-background{
-        position:absolute;
-        top:50%;
-        left:50%;
-        transform: translate(-50%,-50%);
+        position:fixed;
+        top:0;
+        left:0;
+        width: 100%;
+        height: 100%;
         z-index:1;
+        &:after{
+            content:'';
+            position:absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            background:rgba(0,0,0,0.5);
+            z-index:1;
+        }
+        video { 
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -100;
+            transform: translateX(-50%) translateY(-50%);
+            background-size: cover;
+        }
     }
+   
 }
 header{
     display: flex;
+    align-items:center;
+    justify-content:space-between;
     padding:20px 50px;
     img{
         max-width:50px;
     }
-}
-figure{
-    position:absolute;
-    top:150px;
-    right:50px;
-    z-index:1;
-    img{
-        width:250px;
+    .video-actions{
+        svg{
+            width:20px;
+            height:20px;
+            cursor:pointer;
+            margin-left:20px;
+            path{
+                fill:#fff;
+            }
+        }
     }
 }
+
 #weather{
     display:flex;
     align-items: flex-end;
@@ -45,13 +76,99 @@ figure{
     }
     .description{
         font-size:40px;
-        &::first-letter{
-            text-transform: uppercase;
+        p{
+            &::first-letter{
+                text-transform: uppercase;
+            }
+            span{
+                font-size:30px;
+                display:block;
+                opacity:0.2;
+            }
         }
-        span{
-            font-size:30px;
-            display:block;
-            opacity:0.2;
+        figure{
+            margin:0;
+            img{
+                width:100px;
+            }
+        }
+       
+    }
+}
+aside{
+    position:relative;
+    max-height:100vh;
+    width:0;
+    z-index:2;
+    background:rgba(0,0,0,0.5);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    transition: all 0.3s ease-in-out;
+    &.open{
+        width:350px;
+    }
+    > div{
+        width:250px;
+        padding:50px;
+        border-bottom:1px solid rgba(255,255,255,0.2);
+        &:first-child{
+            padding:20px 50px;
+        }
+        &#weather-form{
+            form{
+                position:relative;
+            }
+            label{
+                position:relative;
+            }
+            input{
+                padding:10px 15px;
+                background:none;
+                border:none;
+                color:#fff;
+            }
+            button{
+                background:none;
+                border:none;
+                width:auto;
+                svg{
+                    path{
+                        fill:#fff;
+                    }
+                }
+            }
+            .error-message{
+                position:absolute;
+                bottom:-15px;
+                left:50%;
+                transform: translateX(-50%);
+                color:red;
+                font-size:14px;
+                font-weight: bold;
+                display:block;
+                padding-left:20px;
+                width:100%;
+            }
+        }
+    }
+}
+.btn-aside{
+    position:absolute;
+    top:50%;
+    right:0;
+    transform:translateY(-50%);
+    padding:20px;
+    z-index:2;
+    background:rgba(0,0,0,0.5);
+    transition: all 0.3s ease-in-out;
+    svg{
+        width:20px;
+        transition: all 0.3s ease-in-out;
+    }
+    &.open{
+        right:350px;
+        svg{
+            transform: rotate(180deg);
         }
     }
 }
@@ -60,6 +177,6 @@ footer{
     justify-content: space-between;
     align-items: center;
     margin:0 10px;
-    border-top:2px solid #333;
+    border-top:1px solid #fff;
     padding:50px;
 }
