--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -6,6 +6,10 @@ main{
         flex-direction: column;
         justify-content: space-between;
         height:100vh;
+        @media screen and (max-width: 750px) {
+            min-height:100vh;
+            height:auto;
+        }
         flex:1;
         z-index:2;
     }
@@ -23,29 +27,19 @@ main{
             left:0;
             width: 100%;
             height: 100%;
-            background:rgba(0,0,0,0.5);
+            background:none;
             z-index:1;
         }
-        video { 
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
-            z-index: -100;
-            transform: translateX(-50%) translateY(-50%);
-            background-size: cover;
-        }
     }
-   
 }
 header{
     display: flex;
     align-items:center;
     justify-content:space-between;
     padding:20px 50px;
+    @media screen and (max-width: 750px) {
+        padding:20px 30px;
+    }
     img{
         max-width:50px;
     }
@@ -67,15 +61,28 @@ header{
     align-items: flex-end;
     padding:70px 50px;
     flex:1;
+    @media screen and (max-width: 750px) {
+        padding:50px 30px;
+    }
     .temperature{
         font-size:250px;
         line-height: 190px;
         sup{
             font-size:150px;
         }
+        @media screen and (max-width: 750px) {
+            font-size:100px;
+            line-height: 80px;
+            sup{
+                font-size:40px;
+            }
+        }
     }
     .description{
         font-size:40px;
+        @media screen and (max-width: 750px) {
+            font-size:20px;
+        }
         p{
             &::first-letter{
                 text-transform: uppercase;
@@ -84,28 +91,39 @@ header{
                 font-size:30px;
                 display:block;
                 opacity:0.2;
+                @media screen and (max-width: 750px) {
+                    font-size:16px;
+                }
             }
         }
         figure{
             margin:0;
             img{
                 width:100px;
+                @media screen and (max-width: 750px) {
+                    width:50px;
+                }
             }
         }
        
     }
 }
 aside{
-    position:relative;
+    position:absolute;
+    top:0;
+    right:0;
     max-height:100vh;
     width:0;
     z-index:2;
-    background:rgba(0,0,0,0.5);
+    background:#151515;
     overflow-y: scroll;
     overflow-x: hidden;
     transition: all 0.3s ease-in-out;
     &.open{
         width:350px;
+        @media screen and (max-width: 750px) {
+            width:250px;
+        }
     }
     > div{
         width:250px;
@@ -113,6 +131,13 @@ aside{
         border-bottom:1px solid rgba(255,255,255,0.2);
         &:first-child{
             padding:20px 50px;
+        }
+        @media screen and (max-width: 750px) {
+            padding:30px;
+            width:200px;
+            &:first-child{
+                padding:20px 30px;
+            }
         }
         &#weather-form{
             form{
@@ -126,6 +151,9 @@ aside{
                 background:none;
                 border:none;
                 color:#fff;
+                @media screen and (max-width: 750px) {
+                    width:140px;
+                }
             }
             button{
                 background:none;
@@ -159,14 +187,24 @@ aside{
     transform:translateY(-50%);
     padding:20px;
     z-index:2;
-    background:rgba(0,0,0,0.5);
+    background:none;
     transition: all 0.3s ease-in-out;
     svg{
         width:20px;
         transition: all 0.3s ease-in-out;
     }
+    @media screen and (max-width: 750px) {
+        padding:10px;
+        svg{
+            width:15px;
+            height:15px;
+        }
+    }
     &.open{
         right:350px;
+        @media screen and (max-width: 750px) {
+            right:250px;
+        }
         svg{
             transform: rotate(180deg);
         }
@@ -179,4 +217,11 @@ footer{
     margin:0 10px;
     border-top:1px solid #fff;
     padding:50px;
+    @media screen and (max-width: 750px) {
+        padding:30px;
+        flex-direction:column;
+        p:first-child{
+            margin-bottom:10px;
+        }
+    }
 }
