--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ body{
     font-family: 'Roboto Condensed', sans-serif;
     font-weight:300;
     color:#fff;
-    overflow:hidden;
+    overflow-x:hidden;
     margin:0;
     p{
         margin:0;
